plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.3'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'org.asciidoctor.jvm.convert' version '3.3.2'
}

group = 'com.recipe'
version = '1.0'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('snippetsDir', file("build/generated-snippets"))
	set('springCloudVersion', "2023.0.3")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// ModelMapper
	implementation 'org.modelmapper:modelmapper:3.2.1'

	// Spring Cloud Config Client
	implementation 'org.springframework.cloud:spring-cloud-starter-config'

	// Spring Cloud Bootstrap
	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'

	// Spring Boot Actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// Spring Cloud Bus with AMQP (RabbitMQ)
	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'

	// OpenFeign for declarative REST client
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

	// Eureka Client for Spring Cloud Netflix
	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'


	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'com.auth0:java-jwt:4.2.1'

	implementation 'org.apache.commons:commons-lang3:3.12.0' // 최신 버전

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test') {
	outputs.dir snippetsDir
	useJUnitPlatform()
}

tasks.named('asciidoctor') {
	inputs.dir snippetsDir
	dependsOn test
}
